move privex logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,17 @@
 
 <div class="container">
     <div id="znode-info">
+        <div class="text-center">
+            <a href="https://www.privex.io" target="_BLANK">
+                <img src="/static/logo.png" style="width: 300px;" alt="Privex Logo" />
+                <br/>
+                <strong>Buy Virtual and Dedicated servers with Cryptocurrency at Privex.IO</strong>
+            </a>
+        </div>
+        
+        <hr/>  
         <div class="jumbotron">
+           
             <h1>ZNode Status</h1>
             <h4>Operated by Privex Inc. Cloud Hosting (
                 <a href="https://www.privex.io">www.Privex.IO</a>)</h4>
@@ -181,12 +191,7 @@
             </tr>
         </tbody>
     </table>
-    <div class="text-center">
-        <a href="https://www.privex.io" target="_BLANK">
-            <img src="/static/logo.png" style="width: 300px;" alt="Privex Logo" /><br/>
-            <strong>Buy Virtual and Dedicated servers with Cryptocurrency at Privex.IO</strong>
-        </a>
-    </div>
+
     <br/>
     <br/>
 
