--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,9 @@
                 <br/>
                 <strong>Buy Virtual and Dedicated servers with Cryptocurrency at Privex.IO</strong>
             </a>
+            <br/>
+            <br/>
         </div>
-        
-        <hr/>  
         <div class="jumbotron">
            
             <h1>ZNode Status</h1>
@@ -40,44 +40,27 @@
             <h3 class="text-center">1 XZC = $[[ xzc_price.toFixed(2) ]]</h3>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-4">
-                <strong>Current Payout per block:</strong>
-                <span>[[ payout ]] XZC ($[[ usd_payout ]])</span>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-                <strong>Total ZNodes:</strong>
-                <span>[[ total_znodes ]]</span>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-                <strong>Total Ready ZNodes:</strong>
-                <span>[[ total_znode_ready ]]</span>
-            </div>
-        </div>
-        <hr/>
-        <div class="row">
-            <div class="col-sm-6">
-                <h2 class="text-center">Payout ready nodes</h2>
+            <div class="col-xs-12 col-md-4">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6">
-                        <strong>Avg time per payout ([[ payout ]] XZC):</strong>
-                        <span>[[ (total_znode_ready / 144).toFixed(2) ]] days</span>
-                    </div>
-                    <div class="col-xs-12 col-sm-6">
-                        <strong>Income per month:</strong>
-                        <span>[[ monthly_payout_ready ]] XZC ($[[ monthly_payout_usd_ready ]])</span>
+                    <div class="col-xs-12">
+                        <strong>Current Payout per block:</strong>
+                        <span>[[ payout ]] XZC ($[[ usd_payout ]])</span>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
-                <h2 class="text-center">All nodes</h2>
+            <div class="col-xs-12 col-md-8">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6">
-                        <strong>Avg time per payout ([[ payout ]] XZC):</strong>
-                        <span>[[ (total_znodes / 144).toFixed(2) ]] days</span>
+                    <div class="col-xs-12 col-lg-4">
+                        <strong>Total ZNodes:</strong>
+                        <span>[[ total_znodes ]]</span>
                     </div>
-                    <div class="col-xs-12 col-sm-6">
-                        <strong>Income per month:</strong>
-                        <span>[[ monthly_payout ]] XZC ($[[ monthly_payout_usd ]])</span>
+                    <div class="col-xs-12 col-lg-4">
+                        <strong>Total Enabled ZNodes:</strong>
+                        <span>[[ total_znode_enabled ]]</span>
+                    </div>
+                    <div class="col-xs-12 col-lg-4">
+                        <strong>Total Qualified ZNodes:</strong>
+                        <span>[[ total_znode_qualified ]]</span>
                     </div>
                 </div>
             </div>
@@ -86,9 +69,53 @@
         <h3>General information</h3>
         <p>ZNodes are paid on a payout schedule and may be picked semi-randomly. A payout is an entire block of <strong>[[ payout ]] XZC</strong>.</p>
         <p>A ZNode currently requires a 1000 XZC investment ($[[ (1000 * xzc_price).toFixed(2) ]]) held as collateral</p>
+        <hr/>
+        <h3>Payout Stats</h3>
+        <div class="row">
+            <div class="col-sm-4">
+                <h4>Current</h4>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12">
+                        <strong>Avg time per payout ([[ payout ]] XZC):</strong>
+                        <span>[[ (total_znode_qualified / 144).toFixed(2) ]] days</span>
+                    </div>
+                    <div class="col-xs-12 col-sm-12">
+                        <strong>Income per month:</strong>
+                        <span>[[ monthly_payout_qualified ]] XZC ($[[ monthly_payout_usd_qualified ]])</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <h4>In 7 days</h4>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12">
+                        <strong>Avg time per payout ([[ payout ]] XZC):</strong>
+                        <span>[[ (total_znode_qualified7 / 144).toFixed(2) ]] days</span>
+                    </div>
+                    <div class="col-xs-12 col-sm-12">
+                        <strong>Income per month:</strong>
+                        <span>[[ monthly_payout_qualified7 ]] XZC ($[[ monthly_payout_usd_qualified7 ]])</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <h4>In 7+ days</h4>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12">
+                        <strong>Avg time per payout ([[ payout ]] XZC):</strong>
+                        <span>[[ (total_znodes / 144).toFixed(2) ]] days</span>
+                    </div>
+                    <div class="col-xs-12 col-sm-12">
+                        <strong>Income per month:</strong>
+                        <span>[[ monthly_payout ]] XZC ($[[ monthly_payout_usd ]])</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr/>
 
         <!-- ZNode Search -->
-        <h3>ZNode Search</h3>
+        <!-- <h3>ZNode Search</h3> -->
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Lookup ZNode by payee address"
                    v-model="znodesearchpayee" :disabled="znodelist.length > 0">
@@ -101,8 +128,8 @@
           </span>
         </div>
         <!-- /ZNode Search -->
+        <hr/>
         <div>
-
             <!--
             <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active">
@@ -169,7 +196,6 @@
         <!---------------- END #znode-info -->
 
     </div>
-
 
 </div>
 
@@ -299,35 +325,53 @@
                 },
                 computed: {
                     daily_payout: function() {
-                        return (this.payout / (this.total_znodes / 144)).toFixed(3)
+                        return (this.payout / (this.total_znode_enabled / 144)).toFixed(3)
                     },
-                    daily_payout_ready: function () {
-                        return (this.payout / (this.total_znode_ready / 144)).toFixed(3)
+                    daily_payout_qualified: function () {
+                        return (this.payout / (this.total_znode_qualified / 144)).toFixed(3)
+                    },
+                    daily_payout_qualified7: function () {
+                        return (this.payout / (this.total_znode_qualified7 / 144)).toFixed(3)
                     },
                     monthly_payout: function() {
                         return (this.daily_payout * 31).toFixed(3);
                     },
-                    monthly_payout_ready: function () {
-                        return (this.daily_payout_ready * 31).toFixed(3);
-                    },
                     monthly_payout_usd: function () {
                         return (this.daily_payout * this.xzc_price * 31).toFixed(2);
                     },
-                    monthly_payout_usd_ready: function () {
-                        return (this.daily_payout_ready * this.xzc_price * 31).toFixed(2);
+                    monthly_payout_qualified: function () {
+                        return (this.daily_payout_qualified * 31).toFixed(3);
+                    },
+                    monthly_payout_qualified7: function () {
+                        return (this.daily_payout_qualified7 * 31).toFixed(3);
+                    },
+                    monthly_payout_usd_qualified: function () {
+                        return (this.daily_payout_qualified * this.xzc_price * 31).toFixed(2);
+                    },
+                    monthly_payout_usd_qualified7: function () {
+                        return (this.daily_payout_qualified7 * this.xzc_price * 31).toFixed(2);
                     },
                     usd_payout: function() {
                         return (this.payout * this.xzc_price).toFixed(2);
                     },
                     
-                    total_znode_ready: function() {
-                        var count = 0;
-                        for (k in this.znodelist_qualify) { 
-                            if(this.znodelist_qualify[k] == "true") {
-                                count++;
-                            } 
-                        }
-                        return count;
+                    total_znode_qualified: function() {
+                        return znodelist.all_znodes.filter(function(zn) {
+                            return zn['qualified']
+                        }).length;
+                    },
+                    total_znode_qualified7: function() {
+                        return znodelist.all_znodes.filter(function(zn) {
+                            if(zn['qualified'])
+                                return true;
+                            var match = zn['qualify_reason'].match(/collateralAge=(\d+), znCount=(\d+)/);
+                            return !!(match && (parseInt(match[2]) - parseInt(match[1])) <= 144 * 7);
+                        }).length;
+                    },
+                    total_znode_enabled: function() {
+                        return znodelist.all_znodes.filter(function(zn) {
+                            return zn['status'] == 'ENABLED'
+                        }).length;
                     },
                     znode: function() {
                         //console.log('znodelist', this.znodelist)
